istio-example-1/cart-app-deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-app-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartapp
      version: v1
  template:
    metadata:
      labels:
        app: cartapp
        version: v1
    spec:
      containers:
      - name: cartapp
        image: raguyazhin/cart-app:1.0
        ports:
        - containerPort: 3000
