istio-example-1/orders-app-deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordersapp
      version: v2
  template:
    metadata:
      labels:
        app: ordersapp
        version: v2
    spec:
      containers:
      - name: ordersapp
        image: raguyazhin/orders-app:2.0
        ports:
        - containerPort: 3000
