istio-example-1/canary-cart-app-vir-svc-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartapp-vsvc
spec:
  hosts:
  - "cart.sn.org"
  gateways:
  - shared-gateway
  http:
  - route:
    - destination:
        host: svc-cart-app
        subset: v1
      weight: 80
    - destination:
        host: svc-cart-app
        subset: v2
      weight: 20

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: svc-cart-app
spec:
  host: svc-cart-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
