istio-example-1/canary-vir-svc-80-20-path-based.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shared-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc-redirect
spec:
  hosts:
  - "*"
  gateways:
  - shared-gateway
  http:
    - match:
      - uri:
          prefix: "/cart"
      rewrite:
        uri: /
      route:
        - destination:
            host: svc-cart-app
            subset: v1
          weight: 80
        - destination:
            host: svc-cart-app
            subset: v2
          weight: 20
    - match:
      - uri:
          prefix: "/orders"
      rewrite:
        uri: /
      route:
        - destination:
            host: svc-orders-app
            subset: v1
          weight: 80
        - destination:
            host: svc-orders-app
            subset: v2
          weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cart-versions
spec:
  host: svc-cart-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-versions
spec:
  host: svc-orders-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
